--- a/TODO
+++ b/TODO
@@ -1,12 +1,16 @@
 Todo list
 ---------
 
+o we don't really need a vmlinux file during profiling ...
+
 Correctness
 -----------
  
 o The module must not be unloadable.
 o SMP mappings - place in all buffers perhaps ? 
 o check chroot() processes and do_d_path() 
+o There is no need for the daemon to run as root as long as every binary image
+  is readable ...
  
 Performance
 ----------- 
@@ -16,6 +20,10 @@ o investigate eviction strategy
 o the interrupt handler code could probably be improved by moving into asm, and using arch=ppro 
 o can we fold in the "untouched sample entry" case in hash table to another case ? 
 o would query_module() be faster ? do we care ? 
+o investigate whether it would be better to have abb's linked component hash table
+  - this would complicate the dumping code but reduce the output to the map buffer
+o use u16's not u32's for the map buffer
+o move out module_init()/exit() into a separate object file and compile the rest with -march ?
 
 WBNI
 ----
