--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-21  John Levon  <moz@compsoc.man.ac.uk>
+
+	* results/: Started a collection of results
+
 2001-01-20  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
