--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2001-01-22  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/op_start:
+	* op_user.h: bump up hash table size
+
+	* results/kernel-compile/overhead: intro to kernel
+		compile tests
+
+	* results/kernel-compile/time-aves.pl: script
+		to generate averages + overheads
+
+	* op_syscalls.c: three fixes to do_hash(). It's
+		going to be a pain to make iterative :(
+
 2001-01-21  John Levon  <moz@compsoc.man.ac.uk>
 
 	* results/: Started a collection of results
