--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2001-01-22  John Levon  <moz@compsoc.man.ac.uk>
 
+	* dae/guide.lyx:
+	* dae/guide.html: update docs a little
+
+2001-01-22  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/op_start:
 	* op_user.h: bump up hash table size
 
